Lay out basic design with minimal styling

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
-    <title>Oootch-A-Scootch</title>
+    <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <div class="body">
+        <header>Etch-A-Sketch</header>
+        <div class="main">
+            <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna. Nunc non blandit massa enim nec dui. Orci eu lobortis elementum nibh tellus molestie nunc. Pellentesque elit eget gravida cum. Vitae et leo duis ut diam quam nulla. Facilisi morbi tempus iaculis urna id. Nam libero justo laoreet sit amet cursus sit. Vitae turpis massa sed elementum tempus egestas sed sed. Convallis convallis tellus id interdum velit. Sodales ut eu sem integer. Nisl nisi scelerisque eu ultrices vitae auctor eu augue ut. Condimentum lacinia quis vel eros donec ac. Faucibus purus in massa tempor nec feugiat nisl pretium fusce.</div>
+            <div class="options">
+                <div class="left-buttons">
+                    <button>Button 1</button>
+                    <button>Button 2</button>
+                </div>
+                <div class="middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                <div class="right-buttons">
+                    <button>Button 3</button>
+                    <button>Button 4</button>
+                </div>
+            </div>
+            <div class="sketch-area"></div>
+        </div>
+    </div>
 </body>
 </html>
